project2/test/test_11710204_3.out
Error type 3 at Line 4: redefine variable: a
Error type 8 at Line 5: incompatiable return type
