project2/test/test_11710204_3.spl
int test_11710204_3()
{
   float a = 3.0;
   int a = 1;
   return a;
}
